crates/builddiag-render/tests/snapshots/golden_tests__markdown_verdict_error.snap
---
source: crates/builddiag-render/tests/golden_tests.rs
expression: error_md
---
## builddiag: 💥 Error (0 errors, 0 warnings)

No findings.
