crates/builddiag-render/tests/snapshots/golden_tests__markdown_verdict_fail.snap
---
source: crates/builddiag-render/tests/golden_tests.rs
expression: fail_md
---
## builddiag: ❌ Fail (0 errors, 0 warnings)

No findings.
