crates/builddiag-render/tests/snapshots/golden_tests__markdown_verdict_pass.snap
---
source: crates/builddiag-render/tests/golden_tests.rs
expression: pass_md
---
## builddiag: ✅ Pass (0 errors, 0 warnings)

No findings.
