crates/builddiag-render/tests/snapshots/golden_tests__markdown_verdict_skip.snap
---
source: crates/builddiag-render/tests/golden_tests.rs
expression: skip_md
---
## builddiag: ⏭️ Skip (0 errors, 0 warnings)

No findings.
