crates/builddiag-render/tests/snapshots/golden_tests__markdown_verdict_warn.snap
---
source: crates/builddiag-render/tests/golden_tests.rs
expression: warn_md
---
## builddiag: ⚠️ Warn (0 errors, 0 warnings)

No findings.
